# evo-orchestrator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  evo.py  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
claude-code/: README.md
claude-code/.claude-plugin/: plugin.json
claude-code/commands/: evo.md
claude-code/seeds/: bug-fix.js  code-feature.js  data-report.js  doc-extract.js  migrate.js  research.js  sec-review.js
claude-code/skills/evo-tune/: SKILL.md  arena.workflow.js  evo_io.py
evo/: __init__.py  arena.py  fuse.py  grade.py  judge.py  loop.py  policy.py
examples/: run_research.py
graders/: pytest_grader.py
runtime/: __init__.py  harness.py  models.py
seeds/: README.md  bug-fix.py  code-feature.py  data-report.py  doc-extract.py  migrate.py  research.py  sec-review.py
tests/: smoke_offline.py  smoke_seeds.py  test_grader_wiring.py  test_harness_contract.py
